[Curl] Unable to download files. https://bugs.webkit.org/show_bug.cgi?id=116150

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-05-31
Reviewed by Brent Fulgham.

Implemented basic download functionality for Curl.

Source/WebCore:

* WebCore.vcproj/WebCore.vcproj: Added file.
* WebCore.vcxproj/WebCore.vcxproj: Added file.
* WebCore.vcxproj/WebCore.vcxproj.filters: Added file.
* platform/network/curl/CurlDownload.h: Added.
* platform/network/curl/CurlDownload.cpp: Added.

Source/WebKit/win:

* WebDownload.h:
* WebDownloadCurl.cpp:
(WebDownload::init):
(WebDownload::start):
(WebDownload::cancel):
(WebDownload::deletesFileUponFailure):
(WebDownload::setDeletesFileUponFailure):
(WebDownload::setDestination):
(WebDownload::useCredential):
(WebDownload::didReceiveResponse):
(WebDownload::didReceiveDataOfLength):
(WebDownload::didFinish):
(WebDownload::didFail):

Canonical link: https://commits.webkit.org/135372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151067 268f45cc-cd09-0410-ab3c-d52691b4dbfc