Source/WebKit/win/WebDownload.h
@@ -33,6 +33,8 @@
 
 #if USE(CFNETWORK)
 #include <CFNetwork/CFURLDownloadPriv.h>
+#elif USE(CURL)
+#include <WebCore/CurlDownload.h>
 #endif
 
 namespace WebCore {
@@ -42,7 +44,12 @@ namespace WebCore {
     class ResourceResponse;
 }
 
-class WebDownload : public IWebDownload, public IWebURLAuthenticationChallengeSender
+class WebDownload
+: public IWebDownload
+, public IWebURLAuthenticationChallengeSender
+#if USE(CURL)
+, public CurlDownloadListener
+#endif
 {
 public:
     static WebDownload* createInstance(const WebCore::KURL&, IWebDownloadDelegate*);
@@ -119,6 +126,11 @@ public:
     void didCreateDestination(CFURLRef);
     void didFinish();
     void didFail(CFErrorRef);
+#elif USE(CURL)
+    virtual void didReceiveResponse();
+    virtual void didReceiveDataOfLength(int size);
+    virtual void didFinish();
+    virtual void didFail();
 #endif
 
 protected:
@@ -128,6 +140,8 @@ protected:
     WTF::String m_bundlePath;
 #if USE(CFNETWORK)
     RetainPtr<CFURLDownloadRef> m_download;
+#elif USE(CURL)
+    CurlDownload m_download;
 #endif
     COMPtr<IWebMutableURLRequest> m_request;
     COMPtr<IWebDownloadDelegate> m_delegate;
